run production pm2
