# src/controllers/product.controller.ts
@@ -1,44 +1,110 @@
-import { Controller, Route, Get, Post, Put, Delete, Body, Path } from "tsoa";
-import Product from "../models/Product";
+// src/controllers/product.controller.ts
+import {
+  Controller,
+  Route,
+  Body,
+  Post,
+  Response,
+  Middlewares,
+  Path,
+  Get,
+  Delete,
+  Put,
+  Queries,
+} from "tsoa";
+import { ProductResponse } from "./types/user-response.type";
+import {
+  ProductCreateRequest,
+  ProductGetAllRequest,
+  ProductUpdateRequest,
+} from "./types/product-request.type";
+import validateRequest from "../middlewares/validate-input";
+import productService from "../services/product.service";
+import { ProductPaginatedResponse } from "./types/product-response.types";
 
-export interface ProductTypes {
-  name: string;
-  category: string;
-  price: number;
-  stock: number;
-}
-
-@Route("/v1/products")
+@Route("v1/products")
 export class ProductController extends Controller {
-  // Create a new product
-  @Post("/")
-  public async createProduct(@Body() body: ProductTypes): Promise<ProductTypes> {
-    const product = new Product(body);
-    return await product.save();
+  @Post()
+  @Response(201, "Created Success")
+  @Middlewares(validateRequest) // Add this local middleware to check the valid input
+  public async createProduct(
+    @Body() requestBody: ProductCreateRequest
+  ): Promise<ProductResponse> {
+    try {
+      const newProduct = await productService.createProduct(requestBody);
+
+      return {
+        message: "success",
+        data: {
+          name: newProduct.name,
+          category: newProduct.category,
+          price: newProduct.price,
+        },
+      };
+    } catch (error) {
+      throw error;
+    }
   }
 
-  // Get all products
-  @Get("/")
-  public async getAllProducts(): Promise<ProductTypes[]> {
-    return await Product.find();
+  // get all products
+  	// Add this: the request might look like: /v1/products?page=1&limit=5&filter={"price":{"min": 2, "max":5}}&sort={"name": "desc"}
+    @Get()
+    public async getAllProducts(@Queries() queries: ProductGetAllRequest): Promise<ProductPaginatedResponse> {
+      try {
+        const response = await productService.getAllProducts(queries);
+  
+        return {
+          message: "success",
+          data: response
+        }
+  
+      } catch (error) {
+        console.error(`ProductsController - getAllProducts() method error: ${error}`)
+        throw error;
+      }
+    }
+
+  // get product by id
+  @Get("{id}")
+  public async getItemById(@Path() id: string): Promise<ProductResponse> {
+    try {
+      const product = await productService.getProductById(id);
+
+      return {
+        message: "success",
+        data: product,
+      };
+    } catch (error) {
+      throw error;
+    }
+  }
+  // delete product by id
+  @Delete("{id}")
+  @Response(204, "Delete Success")
+  public async deleteItemById(@Path() id: string): Promise<void> {
+    try {
+      await productService.deleteProduct(id);
+    } catch (error) {
+      throw error;
+    }
   }
 
-  // Get a single product by ID
-  @Get("/{id}")
-  public async getProductById(@Path() id: string): Promise<ProductTypes | null> {
-    return await Product.findById(id);
-  }
+  // update product by id
+  @Put("{id}")
+  @Middlewares(validateRequest) // Add this local middleware to check the valid input
+  public async updateItem(
+    @Path() id: string,
+    @Body() requestBody: ProductUpdateRequest
+  ): Promise<ProductResponse> {
+    try {
+      const updatedProduct = await productService.updateProduct(
+        id,
+        requestBody
+      );
 
-  // Update an existing product by ID
-  @Put("/{id}")
-  public async updateProduct(@Path() id: string, @Body() body: ProductTypes): Promise<ProductTypes | null> {
-    return await Product.findByIdAndUpdate(id, body, { new: true });
-  }
-
-  // Delete a product by ID
-  @Delete("/{id}")
-  public async deleteProduct(@Path() id: string): Promise<{ message: string }> {
-    await Product.findByIdAndDelete(id);
-    return { message: "Product deleted successfully" };
+      return { message: "success", data: updatedProduct };
+    } catch (error) {
+      throw error;
+    }
   }
 }
