# src/controllers/types/user-response.type.ts
@@ -1,0 +1,6 @@
+import { ProductTypes } from "../../database/models/product.model";
+
+export interface ProductResponse {
+  message: string;
+  data: ProductTypes
+}
